# MKCDE

./: CMakeLists.txt  CMakePresets.json  MKCDE.def  README.md
cmake/: Config.cmake  Macros.cmake
include/MKCDE/: App.hpp  Config.hpp  Data.hpp  Graphics.hpp  System.hpp  Utils.hpp  test.hpp
include/MKCDE/App/: ClassDB.hpp  Export.hpp  GraphicalApp.hpp  Node.hpp  Object.hpp
include/MKCDE/Application/: App.hpp  AppMode.hpp  ConsoleApp.hpp  GraphicalApp.hpp  NodeTree.hpp
include/MKCDE/Application/Data/: NodeTree.hpp
include/MKCDE/Containers/Files/: MKRF.hpp
include/MKCDE/Data/: Export.hpp  MKRF.hpp  Node.hpp  NodeTree.hpp
include/MKCDE/Fonts/: sansation.hpp
include/MKCDE/Graphics/: Button.hpp  Export.hpp  GraphicalApp.hpp  Slider.hpp  Triangle.hpp
include/MKCDE/Graphics/App/: GraphicalApp.hpp
include/MKCDE/Graphics/App/Data/: MKRF.hpp  Node.hpp  NodeTree.hpp  Object.hpp
include/MKCDE/Graphics/Utils/: centerTextInRectangle.hpp
include/MKCDE/System/: EnvironmentVariables.hpp  Export.hpp  FileManager.hpp  Logger.hpp  ProcessManager.hpp  SystemInfo.hpp  SystemTime.hpp
include/MKCDE/System/Data/: MKRF.hpp  Node.hpp  Object.hpp
include/MKCDE/Utilities/: ArgsProcessor.hpp
include/MKCDE/Utils/: ArgsProcessor.hpp  EMath.hpp  EMath.inl  Export.hpp
src/MKCDE/: CMakeLists.txt  test.cpp  test.hpp
src/MKCDE/App/: CMakeLists.txt  ClassDB.cpp  GraphicalApp.cpp  Node.cpp  Object.cpp
src/MKCDE/Application/: App.cpp  ConsoleApp.cpp  GraphicalApp.cpp  Node.cpp  NodeTree.cpp
src/MKCDE/Application/Data/: MKRF.cpp  Node.cpp  NodeTree.cpp
src/MKCDE/Containers/Files/: MKRF.cpp
src/MKCDE/Data/: CMakeLists.txt  MKRF.cpp  Node.cpp  NodeTree.cpp
src/MKCDE/Fonts/: sansation.cpp
src/MKCDE/Graphics/: Button.cpp  CMakeLists.txt  GraphicalApp.cpp  Slider.cpp  Triangle.cpp
src/MKCDE/Graphics/App/: GraphicalApp.cpp
src/MKCDE/Graphics/App/Data/: MKRF.cpp  Node.cpp  NodeTree.cpp  Object.cpp
src/MKCDE/Graphics/Utilities/: centerTextInRectangle.cpp
src/MKCDE/Graphics/Utils/: centerTextInRectangle.cpp
src/MKCDE/System/: CMakeLists.txt  EnvironmentVariables.cpp  FileManager.cpp  Logger.cpp  ProcessManager.cpp  SystemInfo.cpp  SystemTime.cpp
src/MKCDE/System/Data/: MKRF.cpp  Node.cpp  Object.cpp
src/MKCDE/Utilities/: ArgsProcessor.cpp  EMath.cpp
src/MKCDE/Utils/: ArgsProcessor.cpp  CMakeLists.txt  EMath.cpp
tools/windows/: resource.rc.in
